# aikb

./: .dockerignore  .env  .env.example  .envrc  .eslintignore  .gitignore  .prettierignore  .worker-pids.json  CLAUDE.md  README.md  aikb.code-workspace  babel.config.json  components.json  dependency-graph.json  disc_herniation_literature_report.md  docker-compose.yml  ecosystem.config.js  eslint.config.mjs  fix-rabbitmq-connection.sh  layout.json  library.excalidraw  logistic_regression.py  main.py  multi-strategy-multi-version-indexing-design.md  nest-cli.json  new_project.md  nx.json  output.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test-api.js  test-fix-simple.js  test-mineru-fix.js  test-python-pdf-splitting.sh  test-rabbitmq-connection.js  test-rabbitmq-connection.ts  tsconfig.base.json  tsconfig.json  (+8 more)
MedCross/: README.md  pyproject.toml
MedCross/.claude/: settings.json
MedCross/apps/ProtRS/: main.py
MedCross/apps/opengwas-cli/: pyproject.toml
MedCross/apps/pride-cli/: config.py  main.py
MedCross/apps/tcia-cli/: README.md  main.py
MedCross/libs/pride-client/: pyproject.toml
MedCross/libs/rediomics/: pyproject.toml
MedCross/pwas/: Readme.developer.md  dxapp.json
MedCross/pwas/src/: pwas.py
MedCross/replication/protein-phenotype/: pyproject.toml
MedCross/scripts/: install.sh
apps/file-renderer/: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION_REPORT.txt  MIGRATION_SUMMARY.md  README.md  config.py  main.py  pyproject.toml
apps/file-renderer/lib/: __init__.py  logging_config.py  middleware.py  s3_key_generator.py
apps/file-renderer/models/: __init__.py  database.py  document.py
apps/file-renderer/routers/: __init__.py  chunking.py  conversion.py  health.py  tasks.py
apps/file-renderer/scripts/: start.sh  verify.py
apps/file-renderer/services/: __init__.py  chunking_service.py  conversion_service.py  file_service.py  s3_storage_service.py  task_service.py
apps/file-renderer/tests/: conftest.py  test_api.py  test_chunking.py
bio_info/: .gitignore  CLAUDE.md  hypertension_olink_proteomics_study_v2.data.sql  main.py  migrate_minio_to_garage.py  participant_sample.csv  pyproject.toml
bio_info/apps/ProtRS/: pyproject.toml
bio_info/apps/math/: pyproject.toml
bio_info/apps/opengwas-cli/: .env.example  main.py
bio_info/apps/pride-cli/: pyproject.toml
bio_info/apps/radiomics/: learn.ipynb  main.py  pyproject.toml
bio_info/apps/tcia-cli/: README.md  main.py  pyproject.toml
bio_info/apps/ukb-api/: pyproject.toml
bio_info/apps/ukb-mcp/: pyproject.toml
bio_info/libs/datalake/: pyproject.toml
bio_info/libs/dx-client/: pyproject.toml
bio_info/libs/gwas-client/: pyproject.toml
bio_info/libs/mono-cell/: pyproject.toml
bio_info/libs/pwas/: pyproject.toml
bio_info/libs/pymr/: demo.ipynb  pyproject.toml
bio_info/libs/stats/: pyproject.toml
bio_info/notebook/: pwas.ipynb  pyproject.toml  use-spark.ipynb
bio_info/notebook/lib/: logistics.py  rcs.py
bio_info/pwas/: Readme.md
bio_info/replication/protein-phenotype/: Untitled.ipynb  catalog.py  clean_data.py  kde.py  logistics.py  main.py  protein-phenotype-relation-analysis-polars.ipynb  protein-phenotype-relation-analysis.ipynb  pwas.ipynb  pwas_data_clean.ipynb  pyproject.toml  use-spark.ipynb
bio_info/scripts/: test_download_cohort.py
bio_info/spark-in/: Readme.developer.md  Readme.md  dxapp.json
bio_info/spark-in/src/: spark-in.py
bio_info/spark-sql-runner/: Readme.developer.md  Readme.md  dxapp.json
bio_info/spark-sql-runner/resources/: spark_sql_runner.py
bio_info/spark-sql-runner/src/: spark_sql_runner.sh
libs/file-renderer/: .env.example  .pre-commit-config.yaml  2206.01062v1.md  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  large_test.md  main.py  package.json  pyproject.toml  pytest.ini  redocly.yaml  test.md  tsconfig.json  tsup.config.ts  vitest.config.ts
libs/file-renderer/alembic/: env.py
libs/file-renderer/docs/: api_usage.md  authentication.md  deployment.md  error_codes.md  markdown_agent_edit_design.md  markdown_edit_implementation_plan.md  pdf_cache_design.md  redoc-template.html
libs/file-renderer/lib/: __init__.py  dependency_injection.py  error_handlers.py  exceptions.py  logging_config.py  middleware.py  s3_key_generator.py  schemas.py
libs/file-renderer/models/: __init__.py  create.py  database.py  docling_model.py  edit.py  file.py  markdown_edit.py  markdown_model.py  pagination.py  pdf_model.py  pdf_render_model.py
libs/file-renderer/repositories/: __init__.py  file_repository.py
libs/file-renderer/routers/: __init__.py  binary.py  csv.py  docling.py  editor.py  file.py  health.py  html.py  json.py  markdown.py  pdf.py  pdf_render.py  tex.py  text.py  xml.py
libs/file-renderer/scripts/: db_downgrade.sh  db_reset.sh  db_revision.sh  db_upgrade.sh  health-check.sh  migrate.sh  start.sh
libs/file-renderer/services/: __init__.py  docling_service.py  markdown_edit_service.py  markdown_service.py  mineru_service.py  pagination_adapters.py  pagination_service.py  pdf_cache_service.py  pdf_service.py  storage_service.py
libs/file-renderer/src/: index.ts  renderer.ts  types.ts
libs/file-renderer/tests/: conftest.py  renderer.test.ts  test_binary_router.py  test_csv_router.py  test_docling_router.py  test_docling_service.py  test_editor_router.py  test_file_api.py  test_file_repository.py  test_file_router.py  test_generic_routers.py  test_html_router.py  test_json_router.py  test_markdown_edit_service.py  test_markdown_router.py  test_markdown_service.py  test_pagination_service.py  test_pdf_cache_service.py  test_pdf_router.py  test_pdf_service.py  test_s3_key_generator.py  test_storage.py  test_storage_service.py  test_tex_router.py  test_text_router.py  test_xml_router.py  types.test.ts
libs/file-renderer/tools/: pdf_reader.py
python-apps/jupyter-server/: pyproject.toml
python-apps/jupyter-server/tests/: conftest.py  test_execute.py  test_executor.py  test_health.py  test_kernel_pool.py  (+1 more)
python-libs/mr-lib/: pyproject.toml
rust/logistic/: Cargo.toml
(+5685 files in other folders)
