[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "pika>=1.3.2",
    "PyPDF2>=3.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.13.0",
    "reportlab>=4.0.0",
    "logging>=0.4.9.6",
    "python-dotenv>=1.1.1",
    "elasticsearch>=9.1.1",
]

[tool.uv]


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true 

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
