[project]
name = "medcross"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "pydantic>=2.12.5" ]


[tool.uv.workspace]
members = [ "libs/*", "apps/*", "replication/*" ]


[tool.uv.sources.gwas-client]
workspace = true


[tool.uv.sources.pymr]
workspace = true


[tool.uv.sources.pride-client]
workspace = true


[tool.uv.sources.dx-client]
workspace = true


[tool.uv.sources.datalake]
workspace = true
