[project]
name = "jupyter-backend"
version = "0.1.0"
description = "Lightweight Jupyter kernel server with REST API for agent integration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jupyter-client>=8.0",
    "ipykernel>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_backend"]

[project.scripts]
jupyter-backend = "jupyter_backend.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I",
    "UP",
    "B",
    "SIM",
    "ARG",
    "PTH",
    "PL",
]
ignore = ["PLR"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG"]
