[package]
name = "logistic"
version = "0.1.0"
edition = "2021"

[dependencies]
iceberg = { version = "0.9.0" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
iceberg-catalog-rest = "0.9.0"
iceberg-storage-opendal = "0.9.0"
duckdb = "1.10502.0"
datafusion = "52"
iceberg-datafusion = "0.9.0"
comfy-table = "7"
tracing = "0.1.44"
ndarray = "0.17.2"
