[project]
name = "rediomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wjixiang", email = "wjixiang27@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
