[project]
name = "protrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lifelines>=0.30.0",
    "pandas>=3.0.1",
    "plotnine>=0.15.3",
    "scikit-learn>=1.8.0",
    "scikit-survival>=0.27.0",
    "torch>=2.11.0",
    "xarray>=2026.2.0",
]
