[project]
name = "tcia-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "tcia-utils>=3.2.1",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydicom>=3.0.2",
]

[project.scripts]
tcia = "main:app"
