[project]
name = "dx-client"
version = "0.1.0"
description = "Type-safe DNAnexus platform client wrapping dxpy SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "dxpy>=0.387.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "duckdb==1.4.4",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
