[project]
name = "stats"
version = "0.1.0"
description = "Statistical analysis methods: logistic regression, RCS (Restricted Cubic Splines)"
readme = "README.md"
authors = [
    { name = "wjixiang", email = "wjixiang27@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars",
    "pyarrow",
    "statsmodels",
    "scipy",
    "joblib",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
datalake = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
