[project]
name = "protein-phenotype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dx-client",
    "plotnine>=0.15.3",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pyiceberg>=0.11.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyright>=1.1.408",
    "python-lsp-server>=1.14.0",
]
